# experiment-templates

./: .gitignore  Makefile  README.md  example.ipynb  experiments.py  features.py  pyfixest_regression.py  pyfixest_regression_example.ipynb  pyproject.toml  test_features.py  test_pyfixest_regression.py  test_tracking.py  tracking.py
.github/workflows/: ci.yml
pyfixest/: test_experiments.py  test_tracking.py  tracking.py
pyfixest-regression/: example.ipynb  hashing.py  test_pyfixest_regression.py  tracking.py
