[project]
name = "experiment-templates"
version = "0.1.0"
description = "Copy-paste templates for MLflow-tracked experiments"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=3.14.0",
    "pandas>=2.3.3",
    "pyfixest>=0.60.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbclient>=0.11.0",
    "nbstripout>=0.9.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["."]

[tool.ruff.lint.per-file-ignores]
# Notebooks legitimately interleave setup statements with imports (e.g. warning
# filters that must run before the import that triggers the warning).
"*.ipynb" = ["E402"]
